force-app/main/default/objects/Portal_Document__c/Portal_Document__c.object-meta.xml
<CustomObject>
    <description>Marketing materials and documents available for use in external facing portals</description>
    <label>Portal Document</label>
    <nameField>
        <label>Portal Documents Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Portal Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>