force-app/main/default/objects/Portal_Document__c/fields/Column_Data__c.field-meta.xml
<CustomField>
    <fullName>Column_Data__c</fullName>
    <description>Separated by comma, data to be display per row</description>
    <inlineHelpText>Separate your entries by comma, make sure they are equal to the number of columns</inlineHelpText>
    <label>Column Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>