force-app/main/default/objects/Portal_Document__c/fields/Document_URL__c.field-meta.xml
<CustomField>
    <fullName>Document_URL__c</fullName>
    <description>The link to the resource that will be displayed</description>
    <label>Document URL</label>
    <type>Url</type>
</CustomField>