force-app/main/default/objects/Portal_Document__c/fields/High_Res_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>High_Res_Image_URL__c</fullName>
    <label>High Res Image URL</label>
    <type>Url</type>
</CustomField>