force-app/main/default/objects/Portal_Document__c/fields/Low_Res_Image_URL__c.field-meta.xml
<CustomField>
    <fullName>Low_Res_Image_URL__c</fullName>
    <label>Low Res Image URL</label>
    <type>Url</type>
</CustomField>