force-app/main/default/objects/Portal_Document__c/fields/Maestro_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Maestro_External_Id__c</fullName>
    <description>External Id Field for Maestro Data migration</description>
    <externalId>true</externalId>
    <inlineHelpText>External Id Field for Maestro Data migration</inlineHelpText>
    <label>Maestro External Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>