force-app/main/default/objects/Portal_Document__c/fields/Portal_Document_Category__c.field-meta.xml
<CustomField>
    <fullName>Portal_Document_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal Document Category</label>
    <referenceTo>Portal_Document_Category__c</referenceTo>
    <relationshipLabel>Portal Documents</relationshipLabel>
    <relationshipName>Portal_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>